--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div>
             <h1>balh blah</h1>
-            <h2>blah</h2>
+            <h2>blah BLAH</h2>
         </div>
 
 
