--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <head>
 		<title>Raine McDevitt</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Genos&display=swap" rel="stylesheet">
 	</head>
     <body>
         <header id="banner">
             <img src="Photos/Name-Logo.png" alt="" id="logo">
+            <h2 id="myInfo">Raine McDevitt</h3>
+            <p id="myInfo">designer & developer</p>
         </header>
         <div class="row">
             <div class="column">
