need to get footer to stay at bottom of page

--- a/index.html
+++ b/index.html
@@ -5,51 +5,81 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Genos&display=swap" rel="stylesheet">
-	</head>
+        <link href="https://fonts.googleapis.com/css2?family=Genos:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
+    </head>
     <body>
-        <header id="banner">
-            <img src="Photos/Name-Logo.png" alt="" id="logo">
-            <h2 id="myInfo">Raine McDevitt</h3>
-            <p id="myInfo">designer & developer</p>
-        </header>
-        <div class="row">
-            <div class="column">
-                <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">
-                    <img src="Photos/JAM.jpg" alt="">
-                </a>
+        <!-- <section class="main"> -->
+            <header>
+                <img src="Photos/Name-Logo.png" alt="" id="logo">
+                <h2 id="myInfo">Raine McDevitt</h3>
+                <p id="myInfo">designer & developer</p>
+            </header>
+            <div class="row">
+                <div class="column">
+                    <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">
+                        <img src="Photos/JAM.jpg" alt="">
+                        <div class="caption">
+                            <p class="cap">CAPTION HERE</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="column">
+                    <img src="Photos/STANCE.png" alt="">
+                    <div class="caption">
+                        <p class="cap">CAPTION HERE</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">
+                        <img src="Photos/WEBFONT.png" alt="">
+                        <div class="caption">
+                            <p class="cap">CAPTION HERE</p>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="column">
-                <img src="Photos/STANCE.png" alt="">
+            <div class="row">
+                <div class="column lower">
+                    <img src="Photos/JEFF.jpg" alt="">
+                    <div class="caption">
+                        <p class="cap">CAPTION HERE</p>
+                    </div>
+                </div>
+                <div class="column lower">
+                    <img src="Photos/LFTG.png" alt="">
+                    <div class="caption">
+                        <p class="cap">CAPTION HERE</p>
+                    </div>
+                </div>
+                <div class="column lower">
+                    <img src="Photos/ACD.png" alt="">
+                    <div class="caption">
+                        <p class="cap">CAPTION HERE</p>
+                    </div>
+                </div>
             </div>
-            <div class="column">
-                <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">
-                    <img src="Photos/WEBFONT.png" alt="">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="column lower">
-                <img src="Photos/JEFF.jpg" alt="">
-            </div>
-            <div class="column lower">
-                <img src="Photos/LFTG.png" alt="">
-            </div>
-            <div class="column lower">
-                <img src="Photos/ACD.png" alt="">
-            </div>
-        </div>
-        <div>
-            <h1>balh blah</h1>
-            <h2>blah BLAH</h2>
-        </div>
-
-
-
-
+            <nav>
+                <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
+                <a href="" target="_blank">STANCE</a> |
+                <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
+                <a href="" target="_blank">Jeff Rosenstock</a>
+                <a href="" target="_blank">LFTG</a> |
+                <a href="" target="_blank">Arch City Defenders</a>
+            </nav>
+            <div class="clear"></div>
+            <footer class="footer">
+                    <div class="footer-left">
+                        <p class="footer-name"> 
+                            Raine McDevitt ©​‌ 2017
+                        </p>
+                    </div>
+                    <div class="footer-right">
+                        <p class="footer-email">
+                            raine.mcdevitt@gmail.com
+                        </p>
+                    </div>
+            </footer>
+        <!-- </section> -->
     </body>
-
-
-
-
 </html>
