got footer to stay at bottom of page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     </head>
     <body>
-        <!-- <section class="main"> -->
+        <div class="wrapper">
             <header>
                 <img src="Photos/Name-Logo.png" alt="" id="logo">
                 <h2 id="myInfo">Raine McDevitt</h3>
@@ -67,7 +67,8 @@
                 <a href="" target="_blank">LFTG</a> |
                 <a href="" target="_blank">Arch City Defenders</a>
             </nav>
-            <div class="clear"></div>
+            <div class="push"></div>
+        </div>
             <footer class="footer">
                     <div class="footer-left">
                         <p class="footer-name"> 
@@ -80,6 +81,5 @@
                         </p>
                     </div>
             </footer>
-        <!-- </section> -->
     </body>
 </html>
