--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <body>
         <div class="wrapper">
             <header>
-                <img src="Photos/Name-Logo.png" alt="" id="logo">
-                <h2 id="myInfo">Raine McDevitt</h3>
-                <p id="myInfo">designer & developer</p>
+                <a href="index.html">
+                    <img src="Photos/Name-Logo.png" alt="" id="logo">
+                </a>
+                <div id="myInfo">
+                    <h2>Raine McDevitt</h3>
+                    <p>designer & developer</p>
+                </div>
             </header>
             <div class="row">
                 <div class="column">
@@ -41,10 +45,12 @@
             </div>
             <div class="row">
                 <div class="column lower">
-                    <img src="Photos/JEFF.jpg" alt="">
-                    <div class="caption">
-                        <p class="cap">CAPTION HERE</p>
-                    </div>
+                    <a href="jeff.html">
+                        <img src="Photos/JEFF.jpg" alt="">
+                        <div class="caption">
+                            <p class="cap">CAPTION HERE</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="column lower">
                     <img src="Photos/LFTG.png" alt="">
@@ -63,7 +69,7 @@
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
-                <a href="" target="_blank">Jeff Rosenstock</a>
+                <a href="" target="_blank">Jeff Rosenstock</a> |
                 <a href="" target="_blank">LFTG</a> |
                 <a href="" target="_blank">Arch City Defenders</a>
             </nav>
