jeff grid laid out

--- a/jeff.html
+++ b/jeff.html
@@ -19,8 +19,38 @@
                     <p>designer & developer</p>
                 </div>
             </header>
+            <div class="container">
+                <div class="tile">
+                    <img src="Photos/JEFF/albums.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/circle.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/910.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/fire.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/sorry.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/amen.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img src="Photos/JEFF/horizontal.jpg" alt="">
+                </div>
+                <!-- <div class="tile">
+                    <img src="Photos/JEFF/nausea.jpg" alt="">
+                </div> -->
+                <!-- <div class="tile">
+                    <img src="Photos/JEFF/festival.jpg" alt="">
+                </div> -->
 
-
+                
+            </div>
+                
             <nav>
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
