began popups for jeff page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <body>
         <div class="wrapper">
             <header>
-                <a href="index.html">
-                    <img src="Photos/Name-Logo.png" alt="" id="logo">
-                </a>
+                <div>
+                    <center>
+                        <a href="index.html">
+                            <img src="Photos/Name-Logo.png" alt="" id="logo">
+                        </a>
+                    </center>
+                </div>
                 <div id="myInfo">
                     <h2>Raine McDevitt</h3>
                     <p>designer & developer</p>
