added captions on homepage and added js file

--- a/index.html
+++ b/index.html
@@ -28,44 +28,44 @@
                     <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">
                         <img src="Photos/JAM.jpg" alt="">
                         <div class="caption">
-                            <p class="cap">CAPTION HERE</p>
+                            <p class="cap">JAM! – A Roller Derby Publication</p>
                         </div>
                     </a>
                 </div>
                 <div class="column">
                     <img src="Photos/STANCE.png" alt="">
                     <div class="caption">
-                        <p class="cap">CAPTION HERE</p>
+                        <p class="cap">Substance Treatment & New Community Experience</p>
                     </div>
                 </div>
                 <div class="column">
                     <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">
                         <img src="Photos/WEBFONT.png" alt="">
                         <div class="caption">
-                            <p class="cap">CAPTION HERE</p>
+                            <p class="cap">Space Mono – Webfont Showcase</p>
                         </div>
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="column lower">
-                    <a href="jeff.html">
+                    <a href="jeff.html" target="_blank">
                         <img src="Photos/JEFF.jpg" alt="">
                         <div class="caption">
-                            <p class="cap">CAPTION HERE</p>
+                            <p class="cap">Jeff Rosenstock – Grid Systems</p>
                         </div>
                     </a>
                 </div>
                 <div class="column lower">
                     <img src="Photos/LFTG.png" alt="">
                     <div class="caption">
-                        <p class="cap">CAPTION HERE</p>
+                        <p class="cap">Little Flower Parish Theatre Group Identity</p>
                     </div>
                 </div>
                 <div class="column lower">
                     <img src="Photos/ACD.png" alt="">
                     <div class="caption">
-                        <p class="cap">CAPTION HERE</p>
+                        <p class="cap">Arch City Defenders</p>
                     </div>
                 </div>
             </div>
