--- a/jeff.html
+++ b/jeff.html
@@ -55,27 +55,6 @@
                     <img class="modal-content" id="img01">
                 </div>
 
-                <script>
-                    var modal = document.getElementById("myModal");
-                    var images = document.getElementsByClassName('myImages');
-                    var modalImg = document.getElementById("img01");
-                    
-                    for (var i = 0; i < images.length; i++) {
-                        var img = images[i];
-                        // and attach our click listener for this image.
-                        img.onclick = function(evt) {
-                            modal.style.display = "block";
-                            modalImg.src = this.src;
-                        }
-                    }
-                    // Get the <span> element that closes the modal
-                    var span = document.getElementsByClassName("close")[0];
-                    
-                    // When the user clicks on <span> (x), close the modal
-                    span.onclick = function() { 
-                        modal.style.display = "none";
-                    }
-                </script>  
                 <!-- <div class="tile">
                     <img src="Photos/JEFF/nausea.jpg" alt="">
                 </div> -->
@@ -105,5 +84,6 @@
                         </p>
                     </div>
             </footer>
+            <script src="main.js"></script>
     </body>
 </html>
