created stance page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Genos:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
     </head>
     <body>
         <div class="wrapper">
@@ -28,21 +27,23 @@
                     <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">
                         <img src="Photos/JAM.jpg" alt="">
                         <div class="caption">
-                            <p class="cap">JAM! – A Roller Derby Publication</p>
+                            <p>JAM! – A Roller Derby Publication</p>
                         </div>
                     </a>
                 </div>
                 <div class="column">
-                    <img src="Photos/STANCE.png" alt="">
-                    <div class="caption">
-                        <p class="cap">Substance Treatment & New Community Experience</p>
-                    </div>
+                    <a href="stance.html" target="_blank">
+                        <img src="Photos/STANCE.png" alt="">
+                        <div class="caption">
+                            <p>Substance Treatment & New Community Experience</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="column">
                     <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">
                         <img src="Photos/WEBFONT.png" alt="">
                         <div class="caption">
-                            <p class="cap">Space Mono – Webfont Showcase</p>
+                            <p>Space Mono – Webfont Showcase</p>
                         </div>
                     </a>
                 </div>
@@ -52,20 +53,20 @@
                     <a href="jeff.html" target="_blank">
                         <img src="Photos/JEFF.jpg" alt="">
                         <div class="caption">
-                            <p class="cap">Jeff Rosenstock – Grid Systems</p>
+                            <p>Jeff Rosenstock – Grid Systems</p>
                         </div>
                     </a>
                 </div>
                 <div class="column lower">
                     <img src="Photos/LFTG.png" alt="">
                     <div class="caption">
-                        <p class="cap">Little Flower Parish Theatre Group Identity</p>
+                        <p>Little Flower Parish Theatre Group Identity</p>
                     </div>
                 </div>
                 <div class="column lower">
                     <img src="Photos/ACD.png" alt="">
                     <div class="caption">
-                        <p class="cap">Arch City Defenders</p>
+                        <p>Arch City Defenders</p>
                     </div>
                 </div>
             </div>
