--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="column lower">
                     <img src="Photos/LFTG.png" alt="">
                     <div class="caption">
-                        <p>Little Flower Parish Theatre Group Identity</p>
+                        <p>Little Flower Parish Theatre Group – Identity</p>
                     </div>
                 </div>
                 <div class="column lower">
