--- a/jeff.html
+++ b/jeff.html
@@ -22,7 +22,7 @@
                     <p>designer & developer</p>
                 </div>
             </header>
-            <div id="jeffTitle">
+            <div id="pageTitle">
                 <h1>Jeff Rosenstock</h1>
                 <p>a study of typographic grid systems</p>
             </div>
@@ -83,6 +83,6 @@
                         </p>
                     </div>
             </footer>
-            <script src="main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
