--- a/stance.html
+++ b/stance.html
@@ -8,26 +8,56 @@
         <link href="https://fonts.googleapis.com/css2?family=Genos:wght@400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <div>
-                <center>
-                    <a href="index.html">
-                        <img src="Photos/Name-Logo.png" alt="" id="logo">
-                    </a>
-                </center>
+        <div class="wrapper">
+            <header>
+                <div>
+                    <center>
+                        <a href="index.html">
+                            <img src="Photos/Name-Logo.png" alt="" id="logo">
+                        </a>
+                    </center>
+                </div>
+                <div id="myInfo">
+                    <h2>Raine McDevitt</h3>
+                    <p>designer & developer</p>
+                </div>
+            </header>
+            <div id="pageTitle">
+                <h1>STANCE</h1>
+                <p>Substance Treatment & New Community Experience</p>
             </div>
-            <div id="myInfo">
-                <h2>Raine McDevitt</h3>
-                <p>designer & developer</p>
-            </div>
-        </header>
 
-        <div>
+
+
+
 
 
             
+            <div>
+                <img id="stanceSite" src="Photos/STANCE/Website.jpg" alt="">
+            </div>
+            <nav>
+                <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
+                <a href="" target="_blank">STANCE</a> |
+                <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
+                <a href="" target="_blank">Jeff Rosenstock</a> |
+                <a href="" target="_blank">LFTG</a> |
+                <a href="" target="_blank">Arch City Defenders</a>
+            </nav>
+            <div class="push"></div>
         </div>
-
-
+            <footer class="footer">
+                <div class="footer-left">
+                    <p class="footer-name"> 
+                        Raine McDevitt ©​‌ 2017
+                    </p>
+                </div>
+                <div class="footer-right">
+                    <p class="footer-email">
+                        raine.mcdevitt@gmail.com
+                    </p>
+                </div>
+            </footer>
+        <script src="main.js"></script>
     </body>
 </html>
