--- a/stance.html
+++ b/stance.html
@@ -26,16 +26,17 @@
                 <h1>STANCE</h1>
                 <p>Substance Treatment & New Community Experience</p>
             </div>
-
-
-
-
-
-
-            
             <div>
-                <img id="stanceSite" src="Photos/STANCE/Website.jpg" alt="">
+                <img id="stanceLogos" src="Photos/STANCE/LogoSpread.jpg" alt="">
             </div>
+
+
+
+
+            <!--website mock below -->
+            <!-- <div>
+                <img id="stanceSite" src="Photos/STANCE/Website.jpg" alt="">
+            </div> -->
             <nav>
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
