working on stance

--- a/stance.html
+++ b/stance.html
@@ -30,6 +30,15 @@
                 <img id="stanceLogos" src="Photos/STANCE/LogoSpread.jpg" alt="">
             </div>
 
+            <div class="stancePampContainer">
+                <div class="stancePamp">
+                    <img src="Photos/STANCE/PampCover.jpg" alt="" width="100%">
+                </div>
+                <div class="stancePamp">
+                    <img src="Photos/STANCE/PampInside.jpg" alt="" width="100%">
+                </div>
+            </div>
+
 
 
 
