--- a/stance.html
+++ b/stance.html
@@ -26,19 +26,23 @@
                 <h1>STANCE</h1>
                 <p>Substance Treatment & New Community Experience</p>
             </div>
-            <div>
-                <img id="stanceLogos" src="Photos/STANCE/LogoSpread.jpg" alt="">
+            <div class="stanceLogos">
+                <img src="Photos/STANCE/LogoSpread.jpg" alt="" width="100%">
             </div>
 
             <div class="stancePampContainer">
-                <div class="stancePamp">
-                    <img src="Photos/STANCE/PampCover.jpg" alt="" width="100%">
+                <div class="stancePamp tile">
+                    <img class="myImages pampImg1" id="myImg" src="Photos/STANCE/PampCover.jpg" alt="" width="100%" height="100%">
                 </div>
-                <div class="stancePamp">
-                    <img src="Photos/STANCE/PampInside.jpg" alt="" width="100%">
+                <div class="stancePamp tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/PampInside.jpg" alt="" width="100%" height="100%">
                 </div>
             </div>
 
+            <div id="myModal" class="modal">
+                <span class="close">&times;</span>
+                <img class="modal-content" id="img01">
+            </div>
 
 
 
