edited class names

--- a/stance.html
+++ b/stance.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="wrapper">
+
             <header>
                 <div>
                     <center>
@@ -22,6 +23,7 @@
                     <p>designer & developer</p>
                 </div>
             </header>
+
             <div id="pageTitle">
                 <h1>STANCE</h1>
                 <p>Substance Treatment & New Community Experience</p>
@@ -30,7 +32,7 @@
                 <img src="Photos/STANCE/LogoSpread.jpg" alt="" width="100%">
             </div>
 
-            <div class="stancePampContainer">
+            <div class="stanceContainer">
                 <div class="stancePamp tile">
                     <img class="myImages pampImg1" id="myImg" src="Photos/STANCE/PampCover.jpg" alt="" width="100%" height="100%">
                 </div>
@@ -39,10 +41,47 @@
                 </div>
             </div>
 
+            <div class="container stancePosterContainer">
+                <div class="tile">
+                    <img class="myImages"  id="myImg" src="Photos/STANCE/Poster4.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/Poster3.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/Poster5.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/Poster1.jpg" alt="">
+                </div>
+                <div class="tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/Poster2.jpg" alt="">
+                </div>
+            </div>
+            <div class="stanceContainer">
+                <img src="Photos/STANCE/PosterMock.jpg" alt="" width="100%">
+            </div>
+
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
                 <img class="modal-content" id="img01">
             </div>
+
+            <div class="stanceContainer">
+                <div class="stancePamp tile">
+                    <img class="myImages pampImg1" id="myImg" src="Photos/STANCE/AppButton.png" alt="" width="100%" height="100%">
+                </div>
+                <div class="stancePamp tile">
+                    <img class="myImages" id="myImg" src="Photos/STANCE/AppMock.jpg" alt="" width="100%" height="100%">
+                </div>
+            </div>
+
+            <div class="stanceContainer stancePamp tile">
+                <img class="myImages pampImg1" id="myImg" src="Photos/STANCE/Chips.jpg" alt="" width="100%">
+            </div>
+
+
+
 
 
 
