stance individual captions

--- a/stance.html
+++ b/stance.html
@@ -9,7 +9,6 @@
     </head>
     <body>
         <div class="wrapper">
-
             <header>
                 <div>
                     <center>
@@ -28,8 +27,12 @@
                 <h1>STANCE</h1>
                 <p>Substance Treatment & New Community Experience</p>
             </div>
+
             <div class="stanceLogos">
                 <img src="Photos/STANCE/LogoSpread.jpg" alt="" width="100%">
+            </div>
+            <div class="stanceCaptions">
+                <p>Logo Identity</p>
             </div>
 
             <div class="stanceContainer">
@@ -39,6 +42,9 @@
                 <div class="stancePamp tile">
                     <img class="myImages" id="myImg" src="Photos/STANCE/PampInside.jpg" alt="" width="100%" height="100%">
                 </div>
+            </div>
+            <div class="stanceCaptions">
+                <p>Pamphlet</p>
             </div>
 
             <div class="container stancePosterContainer">
@@ -58,8 +64,15 @@
                     <img class="myImages" id="myImg" src="Photos/STANCE/Poster2.jpg" alt="">
                 </div>
             </div>
+            <div class="stanceCaptions">
+                <p id="postersCaption">Posters</p>
+            </div>
+            
             <div class="stanceContainer">
                 <img src="Photos/STANCE/PosterMock.jpg" alt="" width="100%">
+            </div>
+            <div class="stanceCaptions">
+                <p>Poster Mockup</p>
             </div>
 
             <div id="myModal" class="modal">
@@ -75,20 +88,24 @@
                     <img class="myImages" id="myImg" src="Photos/STANCE/AppMock.jpg" alt="" width="100%" height="100%">
                 </div>
             </div>
-
-            <div class="stanceContainer stancePamp tile">
-                <img class="myImages pampImg1" id="myImg" src="Photos/STANCE/Chips.jpg" alt="" width="100%">
+            <div class="stanceCaptions">
+                <p>Phone App Mockup</p>
             </div>
 
-
-
-
-
+            <div class="stanceContainer stancePamp tile">
+                <img class="myImages" id="myImg" src="Photos/STANCE/Chips.jpg" alt="" width="100%">
+            </div>
+            <div class="stanceCaptions">
+                <p>Milestone Chips</p>
+            </div>
 
             <!--website mock below -->
-            <!-- <div>
+            <div class="stanceContainer">
                 <img id="stanceSite" src="Photos/STANCE/Website.jpg" alt="">
-            </div> -->
+            </div>
+            <div class="stanceCaptions">
+                <p>Website Mockup</p>
+            </div>
             <nav>
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
