links to all pages added

--- a/index.html
+++ b/index.html
@@ -58,25 +58,29 @@
                     </a>
                 </div>
                 <div class="column lower">
-                    <img src="Photos/LFTG.png" alt="">
-                    <div class="caption">
-                        <p>Little Flower Parish Theatre Group – Identity</p>
-                    </div>
+                    <a href="lftg.html" target="_blank">
+                        <img src="Photos/LFTG.png" alt="">
+                        <div class="caption">
+                            <p>Little Flower Parish Theatre Group – Identity</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="column lower">
-                    <img src="Photos/ACD.png" alt="">
-                    <div class="caption">
-                        <p>Arch City Defenders</p>
-                    </div>
+                    <a href="acd.html" target="_blank">
+                        <img src="Photos/ACD.png" alt="">
+                        <div class="caption">
+                            <p>Arch City Defenders</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <nav>
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
-                <a href="" target="_blank">STANCE</a> |
+                <a href="stance.html" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
-                <a href="" target="_blank">Jeff Rosenstock</a> |
-                <a href="" target="_blank">LFTG</a> |
-                <a href="" target="_blank">Arch City Defenders</a>
+                <a href="jeff.html" target="_blank">Jeff Rosenstock</a> |
+                <a href="lftg.html" target="_blank">LFTG</a> |
+                <a href="acd.html" target="_blank">Arch City Defenders</a>
             </nav>
             <div class="push"></div>
         </div>
