acd and lftg pages ready to have contents added

--- a/acd.html
+++ b/acd.html
@@ -22,7 +22,32 @@
                     <p>designer & developer</p>
                 </div>
             </header>
+            <!-- PAGE CONTENTS GO HERE -->
 
+
+
+
+            <nav>
+                <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
+                <a href="stance.html" target="_blank">STANCE</a> |
+                <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
+                <a href="jeff.html" target="_blank">Jeff Rosenstock</a> |
+                <a href="lftg.html" target="_blank">LFTG</a> |
+                <a href="acd.html" target="_blank">Arch City Defenders</a>
+            </nav>
+            <div class="push"></div>
         </div>
+            <footer class="footer">
+                <div class="footer-left">
+                    <p class="footer-name"> 
+                        Raine McDevitt ©​‌ 2017
+                    </p>
+                </div>
+                <div class="footer-right">
+                    <p class="footer-email">
+                        raine.mcdevitt@gmail.com
+                    </p>
+                </div>
+            </footer>
     </body>
 </html>
