bottom nav margins

--- a/acd.html
+++ b/acd.html
@@ -23,11 +23,48 @@
                 </div>
             </header>
             <!-- PAGE CONTENTS GO HERE -->
+            <div id="pageTitle">
+                <h1>Arch City Defenders</h1>
+                <p>collaborative works of ACD's communications department in 2019</p>
+            </div>
 
+            <div class="stanceContainer">
+                <div class="stancePamp tile">
+                    <img class="pampImg1" src="Photos/ACD/ACD_postcard_front.jpg" alt="">
+                </div>
+                <div class="stancePamp tile">
+                    <img src="Photos/ACD/ACD_postcard_back.jpg" alt="">
+                </div>
+            </div>
 
+            <div class="stanceContainer">
+                <div class="stancePamp tile">
+                    <img class="pampImg1" src="Photos/ACD/SaveDateFront.jpg" alt="">
+                </div>
+                <div class="stancePamp tile">
+                    <img src="Photos/ACD/SaveDateBack.jpg" alt="">
+                </div>
+            </div>
 
+            <div class="stanceContainer">
+                <div class="stancePamp tile">
+                    <img class="pampImg1" src="Photos/ACD/ACD turns_10_front.jpg" alt="">
+                </div>
+                <div class="stancePamp tile">
+                    <img src="Photos/ACD/ACD turns_10_back.jpg" alt="">
+                </div>
+            </div>
 
-            <nav>
+            <div class="stanceContainer">
+                <div class="stancePamp tile">
+                    <img class="pampImg1" src="Photos/ACD/EPJAcover.jpg" alt="">
+                </div>
+                <div class="stancePamp tile">
+                    <img src="Photos/ACD/EPJAinside.jpg" alt="">
+                </div>
+            </div>
+
+            <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="stance.html" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
