--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </a>
                 </div>
             </div>
-            <nav>
+            <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="stance.html" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
