--- a/lftg.html
+++ b/lftg.html
@@ -25,7 +25,7 @@
             <!-- PAGE CONTENTS GO HERE -->
 
 
-            <nav>
+            <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="stance.html" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
