--- a/jeff.html
+++ b/jeff.html
@@ -61,7 +61,7 @@
                     <img src="Photos/JEFF/festival.jpg" alt="">
                 </div> -->
             </div>
-            <nav>
+            <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
