--- a/stance.html
+++ b/stance.html
@@ -106,7 +106,7 @@
             <div class="stanceCaptions">
                 <p>Website Mockup</p>
             </div>
-            <nav>
+            <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
                 <a href="" target="_blank">STANCE</a> |
                 <a href="https://rmcdevitt1.github.io/SpaceMono_WebfontShowcase/" target="_blank">Webfont Showcase</a> |
