set up lftg page

--- a/lftg.html
+++ b/lftg.html
@@ -23,6 +23,23 @@
                 </div>
             </header>
             <!-- PAGE CONTENTS GO HERE -->
+            <center>
+                <img src="Photos/LFTG.png" alt="" width="450" height="400" >
+            </center>
+            <div class="containerLftg">
+                <!-- <div class="lftgtile">
+                    <img src="Photos/LFTG.png" alt="" >
+                </div> -->
+                <div class="lftgtile">
+                    <img src="Photos/LFTG/icons_BW.jpg" alt="">
+                </div>
+                <div class="lftgtile">
+                    <img src="Photos/LFTG/icons_color.jpg" alt="">
+                </div>
+            </div>
+
+
+
 
 
             <nav class="nav">
