lftg done and bottom nav opacity added

--- a/lftg.html
+++ b/lftg.html
@@ -23,13 +23,15 @@
                 </div>
             </header>
             <!-- PAGE CONTENTS GO HERE -->
-            <center>
+            <div id="pageTitle">
+                <h1>LFTG</h1>
+                <p>logo designs for the little flower parish theatre group</p>
+            </div>
+
+            <center class="lftgPageImg">
                 <img src="Photos/LFTG.png" alt="" width="450" height="400" >
             </center>
             <div class="containerLftg">
-                <!-- <div class="lftgtile">
-                    <img src="Photos/LFTG.png" alt="" >
-                </div> -->
                 <div class="lftgtile">
                     <img src="Photos/LFTG/icons_BW.jpg" alt="">
                 </div>
@@ -37,10 +39,6 @@
                     <img src="Photos/LFTG/icons_color.jpg" alt="">
                 </div>
             </div>
-
-
-
-
 
             <nav class="nav">
                 <a href="https://issuu.com/imznewblack/docs/magazine-final-spreads" target="_blank">JAM!</a> |
